--- a/afgan-rasulov-hakkinda-yapilan-yorumlar.html
+++ b/afgan-rasulov-hakkinda-yapilan-yorumlar.html
@@ -101,8 +101,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
 				<div class="text-wrapper align-left">
 					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Afgan Rasulov Hakkında Yapılan Yorumlar ve Değerlendirmeler</strong></h1>
 					<p class="mbr-text align-left mbr-fonts-style mb-4 display-7">
-					Dijital alanda yılların verdiği tecrübe ile birçok YouTube üreticisinin fenomen olma yolculuğunda milyonlarca takipçiye ulaşmasında kritik bir rol oynadım. Öğrencilerin ve genç yeteneklerin dijital dünyada kendilerini ifade etme ve kariyerlerini geliştirme konusunda rehberlik ettim. Yüz binlerce öğrenciye, dijital içerik üretimi, sosyal medya stratejileri ve markalarını nasıl büyütecekleri konusunda yol gösterdim. Dijital dünyanın hızla değişen dinamikleri arasında, bireylere ve markalara, sadece başarıya ulaşmak için değil, aynı zamanda sürdürülebilir ve etik bir şekilde büyümeleri için rehberlik etmekteyim.
-					</p>
+					Dijital alanda yılların verdiği tecrübe ile birçok</p>
 					<div class="mbr-section-btn align-left mt-3"><a class="btn btn-danger-outline display-7" href="afgan-rasulov-kimdir.html#content5-b">Hakkımda daha fazla oku</a> <a class="btn btn-danger display-7" href="afgan-rasulov-kimdir.html#video4-k">Fenomen yorumları</a></div>
 				</div>
 			</div>
@@ -154,7 +153,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3111945" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3111945" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
