--- a/afgan-rasulov-hakkinda-yapilan-yorumlar.html
+++ b/afgan-rasulov-hakkinda-yapilan-yorumlar.html
@@ -101,7 +101,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
 				<div class="text-wrapper align-left">
 					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Afgan Rasulov Hakkında Yapılan Yorumlar ve Değerlendirmeler</strong></h1>
 					<p class="mbr-text align-left mbr-fonts-style mb-4 display-7">
-					Dijital alanda yılların verdiği tecrübe ile birçok</p>
+					<iframe src="https://afganrasulov.github.io/reviews/" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" marginheight="0px" marginwidth="0px" allowfullscreen="" width="100%" height="600px" frameborder="1"></iframe></p>
 					<div class="mbr-section-btn align-left mt-3"><a class="btn btn-danger-outline display-7" href="afgan-rasulov-kimdir.html#content5-b">Hakkımda daha fazla oku</a> <a class="btn btn-danger display-7" href="afgan-rasulov-kimdir.html#video4-k">Fenomen yorumları</a></div>
 				</div>
 			</div>
