--- a/afgan-rasulov-hakkinda-yapilan-yorumlar.html
+++ b/afgan-rasulov-hakkinda-yapilan-yorumlar.html
@@ -101,7 +101,7 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
 				<div class="text-wrapper align-left">
 					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Afgan Rasulov Hakkında Yapılan Yorumlar ve Değerlendirmeler</strong></h1>
 					<p class="mbr-text align-left mbr-fonts-style mb-4 display-7">
-					<iframe src="https://afganrasulov.github.io/reviews/"></iframe></p>
+					<iframe src="https://reviews-9v1.pages.dev/"></iframe></p>
 					<div class="mbr-section-btn align-left mt-3"><a class="btn btn-danger-outline display-7" href="afgan-rasulov-kimdir.html#content5-b">Hakkımda daha fazla oku</a> <a class="btn btn-danger display-7" href="afgan-rasulov-kimdir.html#video4-k">Fenomen yorumları</a></div>
 				</div>
 			</div>
