--- a/fenomen-yorumlari.html
+++ b/fenomen-yorumlari.html
@@ -74,11 +74,11 @@ src="https://www.facebook.com/tr?id=341541102163550&ev=PageView&noscript=1"
 						<a class="nav-link link text-white text-primary display-4" href="index.html">Ana Sayfa</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-white text-primary display-4" href="afgan-rasulov-kimdir.html" aria-expanded="false">Hakkında</a>
+						<a class="nav-link link text-white text-primary show display-4" href="afgan-rasulov-kimdir.html" aria-expanded="true">Hakkında</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-white text-primary display-4" href="premium-egitimler.html">Eğitimler</a>
-					</li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="fenomen-yorumlari.html">Fenomen Yorumları</a></li></ul>
+					</li><li class="nav-item dropdown"><a class="nav-link link text-white text-primary dropdown-toggle display-4" href="fenomen-yorumlari.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Fenomen Yorumları</a><div class="dropdown-menu" data-bs-popper="none" aria-labelledby="dropdown-800"><a class="text-white text-primary dropdown-item display-4" href="https://www.rasulov.net/afgan-rasulov-hakkinda-yapilan-yorumlar">Canlı Değerlendirmeler</a></div></li></ul>
 				
 				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-secondary display-4" href="https://superpeer.com/afganrasulov" target="_blank"><span class="mobi-mbri mobi-mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>VIP DANIŞMANLIK</a></div>
 			</div>
